--- a/.github/workflows/InfinityAutoPackager.yaml
+++ b/.github/workflows/InfinityAutoPackager.yaml
@@ -1,45 +1,25 @@
-# Infinity Auto Packager by AL|EN (alienquake@hotmail.com)
-# A tool that automatically generates Infinity Engine mod packages when you publish a release.
+# WeiDU Mod Packager by Argent77
+# See: https://github.com/InfinityTools/WeiduModPackager
+
+name: 'WeiDU Mod Packager (iemod; win/lin/mac: amd64; use tp2 VERSION suffix)'
 
 on:
   release:
     types: [published]
+  workflow_dispatch:
+
 jobs:
-  InfinityAutoPackager:
-    runs-on: ubuntu-latest
-    steps:
+  call_workflow:
+    strategy:
+      matrix:
+        type: [iemod, windows, linux, macos]
 
-      - name: Initial setup
-        run: |
-          git lfs uninstall
-          git config --global core.autocrlf false
-          git config --global core.ignorecase true
+    permissions:
+      contents: write
 
-      - name: Clone repository using 'github.ref' from release
-        uses: actions/checkout@master
-
-      - name: Create Infinity Engine Mod Packages (.iemod and .zip)
-        uses: ALIENQuake/CreateIEModZipPackage@master
-        id: CreateIEModZipPackage
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload iemod package to latest release
-        uses: svenstaro/upload-release-action@v1-release
-        if: github.ref != 'refs/heads/master'
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ steps.CreateIEModZipPackage.outputs.PackageBaseName }}.iemod
-          asset_name: ${{ steps.CreateIEModZipPackage.outputs.PackageBaseName }}.iemod
-          tag: ${{ github.ref }}
-          overwrite: true
-
-      - name: Upload zip package to latest release
-        uses: svenstaro/upload-release-action@v1-release
-        if: github.ref != 'refs/heads/master'
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ steps.CreateIEModZipPackage.outputs.PackageBaseName }}.zip
-          asset_name: ${{ steps.CreateIEModZipPackage.outputs.PackageBaseName }}.zip
-          tag: ${{ github.ref }}
-          overwrite: true
+    uses: InfinityTools/WeiduModPackagerLibrary/.github/workflows/WeiduModPackagerLibrary.yml@master
+    with:
+      type: ${{ matrix.type }}
+      architecture: amd64
+      suffix: version
+      naming: tp2
